src/components/button-group/button-group.scss
.atomikui-button-group {
  align-items: stretch;
  border: rem(1) solid transparent;
  border-radius: rem($border-radius);
  display: inline-flex;
  height: rem($input-height);

  & > * {
    align-items: center;
    background: $background-light-gray;
    border: 0;
    border-radius: 0;
    color: $default-control-text-color;
    cursor: pointer;
    font-size: inherit;
    font-weight: $font-semibold;
    min-height: auto;
    padding: rem(6 16);
    position: relative;
    text-align: center;
    text-transform: uppercase;

    &--sm {
      height: rem($input-height - 14);

      & > * {
        font-size: rem(10);
      }
    }

    &--md {
      height: rem($input-height - 8);

      & > * {
        font-size: rem(13);
      }
    }

    &--lg {
      height: rem($input-height + 8);

      & > * {
        font-size: rem(18);
      }
    }

    &--stretch {
      display: flex;
      width: 100%;

      & > * {
        flex: 1;
      }
    }

    &:not(:first-child) {
      border-left: rem(1) solid darken($formfield-border-light, 12%);
    }

    &:hover,
    &:focus {
      background: darken($background-light-gray, 5%);
    }

    &:focus {
      z-index: 900;
    }

    &:first-of-type {
      border-radius: rem(3 0 0 3);
    }

    &:last-of-type {
      border-radius: rem(0 3 3 0);
    }

    &.is-selected,
    &.is-selected:hover,
    &.is-selected:focus {
      background: $active-bg-color;
      color: $white;
    }

    &:disabled.is-selected {
      background: darken($disabled-background-gray, 10%);
    }
  }

  &.has-error {
    border-color: $formfield-border-error;
    border-width: rem(2);
  }

  @each $name, $color in $background-dark-colors {
    &--#{$name} {
      & > * {
        &.is-selected,
        &.is-selected:hover,
        &.is-selected:focus {
          background-color: $color;
          color: $white;

          @include altFontColor($name);
        }
      }
    }
  }

  @each $name, $color in $background-light-colors {
    &--#{$name}-light {
      & > * {
        &.is-selected,
        &.is-selected:hover,
        &.is-selected:focus {
          background-color: $color;
          color: $default-control-text-color;
        }
      }
    }
  }
}

